<resources>
    <string name="app_name">Rib Timer</string>

    <string name="timer_start">Start</string>
    <string name="timer_stop">Stop</string>
    <string name="timer_finished">Done!</string>

    <string name="initial_20">20 Minutes</string>
    <string name="initial_60">1 Hour</string>
    <string name="initial_120">2 Hours</string>
    <string name="initial_180">3 Hours</string>
    <string name="initial_10s">10 Seconds</string>
    <string name="initial_test">Test Alarm</string>
    <string name="initial_button">Start</string>

    <string name="alarm_notice">If you don\'t hear an alarm, make sure you have an alarm ringtone set in your phone settings!</string>
</resources>
