<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codenamegradient.ribtimer.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- 20 minutes -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/display_20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/initial_20"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/toggle_20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/button_start"
                    android:onClick="toggleTimer"
                    android:text="@string/initial_button"
                    android:textColor="@color/button_text" />

            </LinearLayout>

            <!-- 1 hour -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/display_60"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/initial_60"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/toggle_60"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/button_start"
                    android:onClick="toggleTimer"
                    android:text="@string/initial_button"
                    android:textColor="@color/button_text" />

            </LinearLayout>

            <!-- 2 hours -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/display_120"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/initial_120"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/toggle_120"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/button_start"
                    android:onClick="toggleTimer"
                    android:text="@string/initial_button"
                    android:textColor="@color/button_text" />

            </LinearLayout>

            <!-- 3 hours -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/display_180"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/initial_180"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/toggle_180"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/button_start"
                    android:onClick="toggleTimer"
                    android:text="@string/initial_button"
                    android:textColor="@color/button_text" />

            </LinearLayout>

            <!-- Alarm Test -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/initial_test"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/toggle_test"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/button_start"
                    android:onClick="toggleTest"
                    android:text="@string/initial_button"
                    android:textColor="@color/button_text" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/alarm_notice" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
